# Roteamento

./: App.py  README.md  pyproject.toml
Dados/: Rotas.xlsx
Notebooks/: Rotas.ipynb
